bugfix css buttons in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,7 @@ button{
   background-color: #000!important;
   color: #fff!important;
 }
+
+.darkTheme button {
+  border: 1px solid #fff!important;
+}
